Fixed line breaks in submitters #5343

--- a/client/src/app/site/pages/meetings/modules/projector/modules/slides/components/motions/modules/motion-slide/components/motion-slide/motion-slide.component.scss
+++ b/client/src/app/site/pages/meetings/modules/projector/modules/slides/components/motions/modules/motion-slide/components/motion-slide/motion-slide.component.scss
@@ -31,7 +31,7 @@
 .metatable {
     width: 100%;
     font-size: 120%;
-
+    word-break: break-all;
     td.min {
         width: 1%;
         white-space: nowrap;
